--- a/templates/scores.html
+++ b/templates/scores.html
@@ -9,8 +9,21 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <title>HTML5 Page</title>
-    <style> body{background-color: rgb(74, 73, 73);}
-    h1, h2{color:aliceblue}</style>
+    <style>
+    body { 
+        background-color: rgb(248, 217, 105);
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    h1, h2 {
+        color:rgb(12, 13, 13)
+    }
+
+    #id-column {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <h1><dt>Highscores</h1></dt>
@@ -18,15 +31,15 @@
     <table class="table table-dark table-striped">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
+            <th id=id-column scope="col">#</th>
+            <th scope="col">Username</th>
             <th scope="col">Points</th>
           </tr>
         </thead>
         <tbody>
             {% for score in scores %}
                 <tr>
-                    <th scope="row">{{ score.id }}</th>
+                    <th id="id-column" scope="row">{{ score.id }}</th>
                     <td>{{ score.name }}</td>
                     <td>{{ score.points }}</td>
                 </tr>
@@ -34,13 +47,13 @@
         </tbody>
     </table>
 
-    <h2>Give Input</h2>
+    <h2>Give Username</h2>
         {% if error %}
             <p>{{ error }}</p>
         {% endif %}
 
     <form action="/" method="post">
-        <input type="text" name="name" placeholder="Name">
+        <input type="text" name="name" placeholder="Username">
         <input type="text" name="points" placeholder="Points">
         <button class="btn btn-primary" type="submit"><i class="fas fa-arrow-right"></i> Send</button>
     </form>
