--- a/templates/scores.html
+++ b/templates/scores.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
@@ -14,6 +13,7 @@
         background-color: rgb(248, 217, 105);
         margin-left: 50px;
         margin-right: 50px;
+        margin-top: 5px;
     }
 
     h1, h2 {
@@ -27,7 +27,6 @@
 </head>
 <body>
     <h1><dt>Highscores</h1></dt>
-
     <table class="table table-dark table-striped">
         <thead>
           <tr>
@@ -60,51 +59,3 @@
 
 </body>
 </html>
-
-<!-- <!doctype html>
-<html lang="en">
-<head>
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-    <title>HTML5 Page</title>
-    <style> body{background-color: rgb(74, 73, 73);}
-    h1, h2{color:aliceblue}</style>
-</head>
-<body>
-    <h1><dt>Highscores</h1></dt>
-
-    <table class="table table-dark table-striped">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Points</th>
-          </tr>
-        </thead>
-        <tbody>
-            <ul>
-                {% for id, name, points in scores %}
-          <tr>
-            <th scope="row">{{id}}</th>
-            <td>{{name}}</td>
-            <td>{{points}}</td>
-          </tr>
-                {% endfor %}
-            </ul>
-        </tbody>
-      </table>
-    <h2>Give Input</h2>
-
-    <form action="/" method="post">
-        <input type="text" name="name" placeholder="Name">
-        <input type="text" name="points" placeholder="Points">
-        <button class="btn btn-primary" type="submit"><i class="fas fa-arrow-right"></i> Send</button>
-    </form>
-
-</body>
-</html> -->
